word-to-pdf-converter-backend/rabbit/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rabbitmq-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "600"
spec:
  rules:
    - host: rabbitmq-manager.com
      http:
        paths:
         - path: /
           pathType: Prefix
           backend:
            service:
              name: rabbitmq
              port:
                number: 15672
